# temp-identity-project

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
cleanup/: REPO_STRUCTURE.md  setup.py
cleanup/tempidentity/: __init__.py
tempidentity/: PLUG_IN_DEVELOPMENT_GUIDE.MD  PROVIDER_IMPLEMENATION_EXAMPLES.md  README.md  __init__.py  cli.py  core.py  integration_main_script.py
tempidentity/providers/: __init__.py  registry.py
tempidentity/providers/email/: __init__.py  base.py  mailgw.py
tempidentity/providers/sms/: __init__.py  base.py  textverified.py
tempidentity/tempidentity/: tempidentity.py
tempidentity/tempidentity/providers/: __init__.py  registry.py
tempidentity_new/: DEVELOPMENT.md  PLUGIN_DEVELOPMENT_GUIDE.md  migrate.sh  pyproject.toml
tempidentity_new/tempidentity/: cli.py
tempidentity_new/tempidentity/providers/: __init__.py
tempidentity_new/tempidentity/providers/email/: __init__.py  base.py  mailgw.py
tempidentity_new/tempidentity/providers/sms/: base.py  textverified.py
tempidentity_new/tests/: test_registry.py
tests/: conftest.py  test_cli.py  test_core.py  test_registry.py  test_usage.py
