[tool.poetry]
name = "tempidentity"
version = "0.1.0"
description = "A powerful tool for generating temporary email addresses and phone numbers with an interactive terminal interface"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "tempidentity"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
requests = "^2.25.0"
colorama = "^0.4.4"
rich = "^10.0.0"
yaspin = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^22.3.0"
flake8 = "^5.0.0"
isort = "^5.10.1"

[tool.poetry.scripts]
tempidentity = "tempidentity.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"